crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pyo3_emitter_draft4.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
expression: rendered
---
struct Validator;
::jsonschema::__private::pyo3_backend! {
#[doc(hidden)]
#[allow(
    non_snake_case,
    dead_code,
    unused_imports,
    unused_variables,
    unreachable_code,
    clippy::all
)]
mod __validator_impl {
    use super::*;
    use ::jsonschema as jsonschema;
    use jsonschema::__private::cmp as __cmp;
    use jsonschema::__private::content as __content;
    use jsonschema::__private::custom as __custom;
    use jsonschema::__private::error as __err;
    use jsonschema::__private::fancy_regex as __fancy;
    use jsonschema::__private::format as __fmt;
    use jsonschema::__private::numeric as __num;
    use jsonschema::__private::regex as __re;
    use jsonschema::__private::serde_json as __sj;
    use jsonschema::__private::types as __types;
    use jsonschema::__private::unique_items as __uniq;
    use jsonschema::__private::unfinished_matches as __unfinished;
    use jsonschema::paths as __paths;
    use jsonschema::JsonType as __JT;
    use jsonschema::JsonTypeSet as __JTS;
    use jsonschema::ErrorIterator as __EI;
    use jsonschema::ValidationError as __VE;
    use jsonschema::__private::pyo3 as __py3;
    use jsonschema::json as __json;
    use jsonschema::json::{
        Array as __ArrayExt, JsonNumber as __NumberExt, Node as __NodeExt,
        Object as __ObjectExt,
    };
    use std::sync::LazyLock as __Lazy;
    type __Json = __json::Pyo3;
    type __Value<'py> = __py3::Borrowed<'py, 'py, __py3::PyAny>;
    type __Bound<'py> = __py3::Bound<'py, __py3::PyAny>;
    type __Map<'py> = <__Value<'py> as __NodeExt<'py, __Json>>::Object;
    type __Array<'py> = <__Value<'py> as __NodeExt<'py, __Json>>::Array;
    pub(super) fn is_valid(instance: __Value<'_>) -> bool {
        let __py = instance.py();
        match __NodeExt::json_type(&instance) {
            __JT::Number => {
                __NodeExt::as_number(&instance)
                    .is_some_and(|__number| __NumberExt::is_written_as_integer(
                        &__number,
                    ))
            }
            __JT::String => true,
            _ => false,
        }
    }
    pub(super) fn validate<'__i>(
        instance: __Value<'__i>,
        __path: &__paths::LazyLocation,
    ) -> Option<__VE<'__i>> {
        let __py = instance.py();
        if !(match __NodeExt::json_type(&instance) {
            __JT::Number => {
                __NodeExt::as_number(&instance)
                    .is_some_and(|__number| __NumberExt::is_written_as_integer(
                        &__number,
                    ))
            }
            __JT::String => true,
            _ => false,
        }) {
            return Some(
                __err::multiple_types(
                    "/type",
                    __path.into(),
                    __NodeExt::lazy_value(&instance),
                    __JTS::empty().insert(__JT::Integer).insert(__JT::String),
                ),
            );
        }
        None
    }
    pub(super) fn collect_errors<'__i>(
        instance: __Value<'__i>,
        __path: &__paths::LazyLocation,
        __errors: &mut Vec<__VE<'__i>>,
    ) {
        let __py = instance.py();
        if !(match __NodeExt::json_type(&instance) {
            __JT::Number => {
                __NodeExt::as_number(&instance)
                    .is_some_and(|__number| __NumberExt::is_written_as_integer(
                        &__number,
                    ))
            }
            __JT::String => true,
            _ => false,
        }) {
            __errors
                .push(
                    __err::multiple_types(
                        "/type",
                        __path.into(),
                        __NodeExt::lazy_value(&instance),
                        __JTS::empty().insert(__JT::Integer).insert(__JT::String),
                    ),
                );
        }
    }
    pub(super) fn run_is_valid(instance: __Value<'_>) -> bool {
        let __py = instance.py();
        is_valid(instance)
    }
    pub(super) fn run_validate<'__i>(instance: __Value<'__i>) -> Option<__VE<'__i>> {
        let __py = instance.py();
        validate(instance, &__paths::LazyLocation::new())
    }
    pub(super) fn run_collect_errors<'__i>(instance: __Value<'__i>) -> Vec<__VE<'__i>> {
        let __py = instance.py();
        let mut errors = Vec::new();
        collect_errors(instance, &__paths::LazyLocation::new(), &mut errors);
        errors
    }
    pub(super) fn entry_is_valid(instance: &__Bound<'_>) -> __py3::PyResult<bool> {
        __json::inspect(
            instance.as_borrowed(),
            false,
            || { run_is_valid(instance.as_borrowed()) },
        )
    }
    pub(super) fn entry_validate<'__i>(
        instance: &'__i __Bound<'__i>,
    ) -> __py3::PyResult<::std::result::Result<(), __VE<'__i>>> {
        __json::inspect(
            instance.as_borrowed(),
            false,
            || {
                match run_validate(instance.as_borrowed()) {
                    Some(e) => Err(e),
                    None => Ok(()),
                }
            },
        )
    }
    pub(super) fn entry_iter_errors<'__i>(
        instance: &'__i __Bound<'__i>,
    ) -> __py3::PyResult<__EI<'__i>> {
        let errors = __json::inspect(
            instance.as_borrowed(),
            false,
            || { run_collect_errors(instance.as_borrowed()) },
        )?;
        Ok(__err::iterator_from(errors))
    }
}
impl Validator {
    pub fn is_valid(
        instance: &::jsonschema::__private::pyo3::Bound<
            '_,
            ::jsonschema::__private::pyo3::PyAny,
        >,
    ) -> ::jsonschema::__private::pyo3::PyResult<bool> {
        __validator_impl::entry_is_valid(instance)
    }
    pub fn validate<'__i>(
        instance: &'__i ::jsonschema::__private::pyo3::Bound<
            '__i,
            ::jsonschema::__private::pyo3::PyAny,
        >,
    ) -> ::jsonschema::__private::pyo3::PyResult<
        ::std::result::Result<(), ::jsonschema::ValidationError<'__i>>,
    > {
        __validator_impl::entry_validate(instance)
    }
    pub fn iter_errors<'__i>(
        instance: &'__i ::jsonschema::__private::pyo3::Bound<
            '__i,
            ::jsonschema::__private::pyo3::PyAny,
        >,
    ) -> ::jsonschema::__private::pyo3::PyResult<::jsonschema::ErrorIterator<'__i>> {
        __validator_impl::entry_iter_errors(instance)
    }
}
}
