crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pyo3_object_property.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
expression: "render_config_for::<crate::codegen::emit_pyo3::Pyo3Emitter>(&test_config(schema))"
---
struct Validator;
#[doc(hidden)]
#[allow(
    non_snake_case,
    dead_code,
    unused_imports,
    unused_variables,
    unreachable_code,
    clippy::all
)]
mod __validator_impl {
    use super::*;
    use jsonschema::__private::cmp as __cmp;
    use jsonschema::__private::content as __content;
    use jsonschema::__private::custom as __custom;
    use jsonschema::__private::error as __err;
    use jsonschema::__private::fancy_regex as __fancy;
    use jsonschema::__private::format as __fmt;
    use jsonschema::__private::numeric as __num;
    use jsonschema::__private::regex as __re;
    use jsonschema::__private::serde_json as __sj;
    use jsonschema::__private::types as __types;
    use jsonschema::__private::unique_items as __uniq;
    use jsonschema::paths as __paths;
    use jsonschema::JsonType as __JT;
    use jsonschema::JsonTypeSet as __JTS;
    use jsonschema::ErrorIterator as __EI;
    use jsonschema::ValidationError as __VE;
    use jsonschema::__private::pyo3 as __py3;
    use jsonschema::json as __json;
    use jsonschema::json::{
        Array as __ArrayExt, JsonNumber as __NumberExt, Node as __NodeExt,
        Object as __ObjectExt,
    };
    use std::sync::LazyLock as __Lazy;
    type __Json = __json::Pyo3;
    type __Value<'py> = __py3::Borrowed<'py, 'py, __py3::PyAny>;
    type __Bound<'py> = __py3::Bound<'py, __py3::PyAny>;
    type __Map<'py> = <__Value<'py> as __NodeExt<'py, __Json>>::Object;
    type __Array<'py> = <__Value<'py> as __NodeExt<'py, __Json>>::Array;
    pub(super) fn is_valid(instance: __Value<'_>) -> bool {
        let __py = instance.py();
        match __json::narrow_object(instance) {
            Some(obj) => {
                __ObjectExt::members(&obj)
                    .all(|(key, instance)| {
                        let key_str = (&*key);
                        match key_str {
                            "a" => __NodeExt::is_string(&instance),
                            _ => true,
                        }
                    })
            }
            None => false,
        }
    }
    pub(super) fn validate<'__i>(
        instance: __Value<'__i>,
        __path: &__paths::LazyLocation,
    ) -> Option<__VE<'__i>> {
        let __py = instance.py();
        match __json::narrow_object(instance) {
            Some(obj) => {
                for (key, value) in __ObjectExt::members(&obj) {
                    let key_str = (&*key);
                    match key_str {
                        "a" => {
                            let instance = value;
                            let __path = &__path.push("a");
                            if !(__NodeExt::is_string(&instance)) {
                                return Some(
                                    __err::single_type(
                                        "/properties/a/type",
                                        __path.into(),
                                        __NodeExt::lazy_value(&instance),
                                        __JT::String,
                                    ),
                                );
                            }
                        }
                        _ => {}
                    }
                }
            }
            None => {
                return Some(
                    __err::single_type(
                        "/type",
                        __path.into(),
                        __NodeExt::lazy_value(&instance),
                        __JT::Object,
                    ),
                );
            }
        }
        None
    }
    pub(super) fn collect_errors<'__i>(
        instance: __Value<'__i>,
        __path: &__paths::LazyLocation,
        __errors: &mut Vec<__VE<'__i>>,
    ) {
        let __py = instance.py();
        match __json::narrow_object(instance) {
            Some(obj) => {
                if let Some(value) = __ObjectExt::get(
                    &obj,
                    __py3::intern!(__py, "a").as_unbound(),
                ) {
                    let instance = value;
                    if !(__NodeExt::is_string(&instance)) {
                        let __path = &__path.push("a");
                        if !(__NodeExt::is_string(&instance)) {
                            __errors
                                .push(
                                    __err::single_type(
                                        "/properties/a/type",
                                        __path.into(),
                                        __NodeExt::lazy_value(&instance),
                                        __JT::String,
                                    ),
                                );
                        }
                    }
                }
            }
            None => {
                __errors
                    .push(
                        __err::single_type(
                            "/type",
                            __path.into(),
                            __NodeExt::lazy_value(&instance),
                            __JT::Object,
                        ),
                    );
            }
        }
    }
    pub(super) fn entry_is_valid(instance: &__Bound<'_>) -> __py3::PyResult<bool> {
        let _scope = __json::PendingErrorScope::enter();
        __json::probe_root(instance.as_borrowed());
        if let Some(error) = __json::take_pending_error() {
            return Err(error);
        }
        let result = is_valid(instance.as_borrowed());
        if let Some(error) = __json::take_pending_error() {
            return Err(error);
        }
        Ok(result)
    }
    pub(super) fn entry_validate<'__i>(
        instance: &'__i __Bound<'__i>,
    ) -> __py3::PyResult<::std::result::Result<(), __VE<'__i>>> {
        let _scope = __json::PendingErrorScope::enter();
        __json::probe_root(instance.as_borrowed());
        if let Some(error) = __json::take_pending_error() {
            return Err(error);
        }
        let result = match validate(
            instance.as_borrowed(),
            &__paths::LazyLocation::new(),
        ) {
            Some(e) => Err(e),
            None => Ok(()),
        };
        if let Some(error) = __json::take_pending_error() {
            return Err(error);
        }
        Ok(result)
    }
    pub(super) fn entry_iter_errors<'__i>(
        instance: &'__i __Bound<'__i>,
    ) -> __py3::PyResult<__EI<'__i>> {
        let _scope = __json::PendingErrorScope::enter();
        __json::probe_root(instance.as_borrowed());
        if let Some(error) = __json::take_pending_error() {
            return Err(error);
        }
        let mut errors = Vec::new();
        collect_errors(
            instance.as_borrowed(),
            &__paths::LazyLocation::new(),
            &mut errors,
        );
        if let Some(error) = __json::take_pending_error() {
            return Err(error);
        }
        Ok(__err::iterator_from(errors))
    }
}
impl Validator {
    pub fn is_valid(
        instance: &jsonschema::__private::pyo3::Bound<
            '_,
            jsonschema::__private::pyo3::PyAny,
        >,
    ) -> jsonschema::__private::pyo3::PyResult<bool> {
        __validator_impl::entry_is_valid(instance)
    }
    pub fn validate<'__i>(
        instance: &'__i jsonschema::__private::pyo3::Bound<
            '__i,
            jsonschema::__private::pyo3::PyAny,
        >,
    ) -> jsonschema::__private::pyo3::PyResult<
        ::std::result::Result<(), jsonschema::ValidationError<'__i>>,
    > {
        __validator_impl::entry_validate(instance)
    }
    pub fn iter_errors<'__i>(
        instance: &'__i jsonschema::__private::pyo3::Bound<
            '__i,
            jsonschema::__private::pyo3::PyAny,
        >,
    ) -> jsonschema::__private::pyo3::PyResult<jsonschema::ErrorIterator<'__i>> {
        __validator_impl::entry_iter_errors(instance)
    }
}
