crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__required_fused_into_properties.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"properties\":{\"a\":{\"type\":\"string\"}},\"required\":[\"a\",\"b\"],\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => {
                let mut __req_0 = false;
                let mut __req_1 = false;
                let __object_pass = obj
                    .iter()
                    .all(|(key, instance)| {
                        match key.as_str() {
                            "a" => {
                                if !(instance.is_string()) {
                                    return false;
                                }
                                __req_0 = true;
                            }
                            "b" => {
                                __req_1 = true;
                            }
                            _ => {}
                        }
                        true
                    });
                __object_pass && __req_0 && __req_1
            }
            _ => false,
        }
