crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__required_fused_with_additional_schema.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"additionalProperties\":{\"type\":\"string\"},\"required\":[\"a\"],\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => {
                let mut __req_0 = false;
                let __object_pass = obj
                    .iter()
                    .all(|(key, instance)| {
                        let mut covered = false;
                        match key.as_str() {
                            "a" => {
                                __req_0 = true;
                            }
                            _ => {}
                        }
                        if !covered {
                            if !(instance.is_string()) {
                                return false;
                            }
                        }
                        true
                    });
                __object_pass && __req_0
            }
            _ => false,
        }
