crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__required_only_not_fused.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"required\":[\"a\",\"b\"],\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                (obj.contains_key("a")) && (obj.contains_key("b"))
            }
            _ => false,
        }
